--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="300dp"
+    android:layout_gravity="center"
     >
 
     <android.support.v7.widget.CardView
@@ -40,7 +41,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:text="Mr akah bienvenu sur Open Market , ici faites de bonne affaire et vendez sans frais . Pour une meilleur utilisation veiller modifier les donnees de votre compre maintenant "
+                android:text="Bienvenu sur Open Market , pour une meilleur utilisation veillez modifier les donnees de votre compte ."
                 android:textAlignment="center"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,17 +50,17 @@
 
             <Button
                 android:id="@+id/button_pop_up"
-                android:layout_width="0dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="17dp"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
                 android:text="modifier"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/plus_tard_pop_up"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_pop_up" />
@@ -70,9 +71,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_cloxe" />
+
+            <Button
+                android:id="@+id/plus_tard_pop_up"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:text="plus tard"
+                app:layout_constraintBottom_toBottomOf="@+id/button_pop_up"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/blanc"
+                android:textAllCaps="false"
+                android:background="@drawable/second_button_background"
+                app:layout_constraintTop_toTopOf="@+id/button_pop_up" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
