--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -41,7 +41,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:text="Bienvenu sur Open Market , pour une meilleur utilisation veillez modifier les donnees de votre compte ."
+                android:text="Bienvenu sur Open Market , pour une meilleur utilisation il est important de modifier les donnees de votre compte ."
                 android:textAlignment="center"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
                 android:id="@+id/button_pop_up"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
@@ -80,14 +80,34 @@
                 android:id="@+id/plus_tard_pop_up"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/second_button_background"
                 android:text="plus tard"
+                android:textAllCaps="false"
+                android:textColor="@color/blanc"
                 app:layout_constraintBottom_toBottomOf="@+id/button_pop_up"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/blanc"
-                android:textAllCaps="false"
-                android:background="@drawable/second_button_background"
                 app:layout_constraintTop_toTopOf="@+id/button_pop_up" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:alpha="0.1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+
+                <ImageView
+                    android:src="@drawable/shop"
+                    android:scaleType="centerCrop"
+                    android:id="@+id/image_de_fond"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
