--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -11,6 +11,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         app:cardCornerRadius="5dp"
+        app:cardBackgroundColor="@color/black"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,27 +23,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/image_pop_up"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/boy"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:src="@drawable/shop"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_pop_up"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
                 android:text="Bienvenu sur Open Market , pour une meilleur utilisation il est important de modifier les donnees de votre compte ."
                 android:textAlignment="center"
+                android:textColor="@color/blanc"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,25 +86,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/button_pop_up"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/button_pop_up" />
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:alpha="0.1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
 
-
-
-                <ImageView
-                    android:src="@drawable/shop"
-                    android:scaleType="centerCrop"
-                    android:id="@+id/image_de_fond"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
 
 
         </android.support.constraint.ConstraintLayout>
