--- a/CommunityMarket/app/src/main/res/layout/activity_detail_principal_.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_principal_.xml
@@ -10,6 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/detail_image_post_toolbar"
             android:layout_width="match_parent"
@@ -22,16 +23,6 @@
             app:titleTextColor="@color/black"
             />
 
-        <ImageView
-            android:elevation="100dp"
-            android:id="@+id/detail_image_post"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/post_detail_height"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar" />
 
         <TextView
             android:id="@+id/detail_titre_produit"
@@ -161,7 +152,6 @@
             app:layout_constraintTop_toTopOf="@+id/detail_image_du_profil" />
 
 
-
         <ImageButton
             android:id="@+id/vendeur_button"
             android:layout_width="@dimen/new_detail_supp_butt_widht"
@@ -242,6 +232,29 @@
             app:layout_constraintEnd_toEndOf="@+id/post_detail_add_comment_btn"
             app:layout_constraintStart_toStartOf="@+id/post_detail_add_comment_btn"
             app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
+
+        <ImageView
+            android:id="@+id/detail_image_post"
+            android:layout_width="0dp"
+            android:layout_height="510dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar"
+            android:src="@drawable/t_shirt"
+            android:scaleType="centerCrop"
+            />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_progress"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/background_detail" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
