--- a/CommunityMarket/app/src/main/res/layout/activity_detail_principal_.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_principal_.xml
@@ -11,6 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/gradient_bg" />
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/detail_image_post_toolbar"
             android:layout_width="match_parent"
@@ -22,6 +31,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:titleTextColor="@color/black"
             />
+
+        <ImageView
+            android:id="@+id/detail_image_post"
+            android:layout_width="0dp"
+            android:layout_height="510dp"
+            android:elevation="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/t_shirt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar" />
 
 
         <TextView
@@ -232,29 +253,6 @@
             app:layout_constraintEnd_toEndOf="@+id/post_detail_add_comment_btn"
             app:layout_constraintStart_toStartOf="@+id/post_detail_add_comment_btn"
             app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
-
-        <ImageView
-            android:id="@+id/detail_image_post"
-            android:layout_width="0dp"
-            android:layout_height="510dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar"
-            android:src="@drawable/t_shirt"
-            android:scaleType="centerCrop"
-            />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_progress"
-            app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/background_detail" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
