--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/bangers"
-        android:text="Kulture"
+        android:text="Open Market"
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
