--- a/CommunityMarket/app/src/main/res/layout/content_test_detail.xml
+++ b/CommunityMarket/app/src/main/res/layout/content_test_detail.xml
@@ -1,106 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".postActivity.DetailActivity"
-    android:background="@color/blanc">
+    android:layout_height="600dp"
+    android:background="@color/blanc"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".postActivity.TestDetailActivity"
+    tools:showIn="@layout/activity_test_detail">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/gradient_bg" />
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/detail_image_post_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/blanc"
-            android:elevation="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:titleTextColor="@color/black"
-            />
-
-        <ImageView
-            android:id="@+id/detail_image_post"
-            android:layout_width="0dp"
-            android:layout_height="510dp"
-            android:elevation="100dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/t_shirt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar" />
-
-
-        <TextView
-            android:id="@+id/detail_prix_produit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/new_detail_date_name_margin_start"
-            android:layout_marginTop="@dimen/new_detail_magin_top"
-            android:layout_marginEnd="8dp"
-            android:ellipsize="end"
-            android:lineSpacingExtra="4dp"
-            android:lines="1"
-            android:textColor="@color/black"
-            android:textSize="@dimen/new_detail_text_size"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_image_post" />
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/view"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@color/black"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
-
-        <TextView
-            android:id="@+id/date_de_publication"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/new_detail_date_name_margin_start"
-            android:layout_marginTop="28dp"
-            android:textColor="@color/black"
-            android:textSize="@dimen/new_detail_day_name_user"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/detail_description"
             android:layout_width="@dimen/new_desc_text_width"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:lineSpacingExtra="8dp"
             android:textColor="@color/black"
             android:textSize="@dimen/new_detail_desc_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_image_du_profil"
+            app:layout_constraintTop_toBottomOf="@+id/view"
             tools:ignore="MissingConstraints" />
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -148,15 +87,15 @@
             android:id="@+id/detail_image_du_profil"
             android:layout_width="@dimen/new_detail_height_image"
             android:layout_height="@dimen/new_detail_height_image"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:src="@drawable/boy"
-            app:layout_constraintBottom_toBottomOf="@+id/date_de_publication"
-            app:layout_constraintStart_toEndOf="@+id/date_de_publication"
-            app:layout_constraintTop_toTopOf="@+id/date_de_publication"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
             tools:srcCompat="@tools:sample/avatars" />
 
         <ImageButton
-            android:id="@+id/supprime_detail_button"
+            android:id="@+id/supprime"
             android:layout_width="@dimen/new_detail_supp_butt_widht"
             android:layout_height="@dimen/new_detail_height_button"
             android:layout_marginStart="8dp"
@@ -166,6 +105,7 @@
             android:textAllCaps="false"
             android:textColor="@color/blanc"
             android:textSize="@dimen/new_detail_supp_button_size_text"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/detail_image_du_profil"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -174,7 +114,7 @@
 
 
         <ImageButton
-            android:id="@+id/vendeur_button"
+            android:id="@+id/vendeur"
             android:layout_width="@dimen/new_detail_supp_butt_widht"
             android:layout_height="@dimen/new_detail_height_button"
             android:layout_marginStart="8dp"
@@ -184,39 +124,12 @@
             android:textAllCaps="false"
             android:textColor="@color/blanc"
             android:textSize="@dimen/new_detail_supp_button_size_text"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/detail_image_du_profil"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/detail_image_du_profil"
             app:layout_constraintTop_toTopOf="@+id/detail_image_du_profil" />
-
-        <ProgressBar
-            android:id="@+id/detail_progress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/detail_image_post"
-            app:layout_constraintEnd_toEndOf="@+id/detail_image_post"
-            app:layout_constraintStart_toStartOf="@+id/detail_image_post"
-            app:layout_constraintTop_toTopOf="@+id/detail_image_post" />
-
-        <TextView
-            android:id="@+id/detail_prix_produit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/new_detail_date_name_margin_start"
-            android:layout_marginTop="@dimen/new_detail_prix_margin_top"
-            android:layout_marginEnd="8dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/new_detail_prix_text_size"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit"
-            />
 
         <TextView
             android:id="@+id/comment_empty_text"
@@ -237,7 +150,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:background="@color/black"
+            android:background="@color/blanc"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/comment_empty_text">
@@ -255,4 +168,5 @@
             app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
 
     </android.support.constraint.ConstraintLayout>
+
 </android.support.v4.widget.NestedScrollView>
