corrextion des erreurs

--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -92,7 +92,8 @@
                     android:id="@+id/toolbarDetail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:titleTextColor="@color/orange"
+                    app:titleTextColor="@color/blanc"
+                    android:theme="@style/ToolbarTheme"
                     android:background="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
