--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -43,36 +43,30 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/choice_button_width"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
         android:elevation="3dp"
         android:textAllCaps="false"
-        android:textSize="@dimen/button_param_text_size"
         android:textColor="@color/blanc"
+        android:textSize="@dimen/button_param_text_size"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />
+        app:layout_constraintTop_toBottomOf="@+id/gotoRegister" />
 
-    <Button
+    <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/gotoRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/choice_button_width"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
-        android:background="@drawable/second_button_background"
-        android:elevation="3dp"
-
-        android:text="@string/enregister"
-        android:textAllCaps="false"
-        android:textColor="@color/blanc"
-        android:textSize="@dimen/button_param_text_size"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gotoLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_button"
@@ -84,7 +78,6 @@
         android:fontFamily="sans-serif-condensed"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:text="@string/choice_enregistrer"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/blanc"
