--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -118,7 +118,8 @@
                     android:id="@+id/detail_image_post_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:titleTextColor="@color/orange"
+                    app:titleTextColor="@color/blanc"
+                    android:theme="@style/ToolbarTheme"
                     android:background="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
