--- a/CommunityMarket/app/src/main/res/layout/activity_cursor.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_cursor.xml
@@ -35,7 +35,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="2dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="0dp"
         android:background="@null"
         android:fontFamily="sans-serif"
         android:text="@string/cursor_next"
@@ -51,8 +53,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="2dp"
+        android:layout_marginBottom="0dp"
         android:background="@null"
         android:fontFamily="sans-serif"
         android:text="@string/passer"
