--- a/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_four.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/app_bar_height"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/detail_image_post_toolbar"
