--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/app_bar_height"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/detail_image_post_toolbar"
@@ -44,12 +45,13 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:src="@drawable/ic_send_message_detail"
+                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/view"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.945"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView5"
-                    app:srcCompat="@android:drawable/ic_dialog_email" />
+                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/supprime_detail_button"
@@ -57,6 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/fab_margin"
                     android:src="@drawable/ic_trsah"
+                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="@+id/view"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.945"
