--- a/CommunityMarket/app/src/main/res/layout/activity_test.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_test.xml
@@ -29,6 +29,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/app_bar_height"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/detail_image_post_toolbar"
@@ -47,7 +48,7 @@
                     app:layout_constraintHorizontal_bias="0.945"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView5"
-                    app:srcCompat="@android:drawable/ic_dialog_email" />
+                   android:src="@drawable/ic_send_message_detail" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/supprime_detail_button"
