--- a/CommunityMarket/app/src/main/res/layout/content_accueil.xml
+++ b/CommunityMarket/app/src/main/res/layout/content_accueil.xml
@@ -37,7 +37,7 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_plus" />
+        app:srcCompat="@drawable/ic_ajouter" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/tabsview"
