--- a/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/exit_pop_up.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
-    android:layout_gravity="center"
-    >
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center">
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="300dp"
@@ -24,29 +22,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/image_pop_up"
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                android:src="@drawable/hello"
-                android:background="@color/blanc"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_pop_up"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Bienvenu sur Open Market ,avant de pouvoir poster, modifier les donnees de votre compte ."
+                android:layout_marginTop="32dp"
+                android:text="vous nous laissez ?"
                 android:textAlignment="center"
                 android:textColor="@color/blanc"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.68"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_pop_up" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <Button
                 android:id="@+id/non_button"
@@ -56,7 +45,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/main_background"
-                android:text="modifier"
+                android:text="non "
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
@@ -82,15 +71,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:background="@drawable/second_button_background"
-                android:text="plus tard"
+                android:text="oui"
                 android:textAllCaps="false"
                 android:textColor="@color/blanc"
                 app:layout_constraintBottom_toBottomOf="@+id/non_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/non_button" />
 
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="72dp"
+                android:layout_marginEnd="8dp"
+                android:text="Exit !!!"
+                android:textColor="@color/blanc"
+                android:textSize="60sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
