correction des erreurs

--- a/CommunityMarket/app/src/main/res/values/colors.xml
+++ b/CommunityMarket/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="likegris">#747474</color>
     <color name="likerouge">#ff4336</color>
     <color name="doux">#FFEB3B</color>
-    <color name="colorAccent">ffd740</color>
+    <color name="colorAccent">#ffd740</color>
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796b</color>
     <color name="black">#000</color>
