--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,6 @@
         app:layout_constraintVertical_bias="0.06" />
 
     <ImageView
-
         android:id="@+id/load_intro_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +35,7 @@
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:src="@mipmap/ic_launcher_logo"
+        android:src="@mipmap/ic_launcher_logo_two"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
