--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
-        android:layout_marginTop="472dp"
+        android:layout_marginTop="460dp"
         android:fontFamily="@font/bangers"
         android:src="@mipmap/ic_launcher_logo_two"
         android:text="Open Market"
@@ -27,16 +27,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="348dp"
         android:fontFamily="@font/pacifico"
         android:text="Open Market"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/load_intro_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toEndOf="@+id/load_intro_text"
         app:layout_constraintTop_toTopOf="@+id/load_intro_text"
         app:layout_constraintVertical_bias="0.0" />
@@ -48,9 +48,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="all  you  want  is  there"
+        android:text="all  you  want  is  here"
         android:textAlignment="center"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="@+id/load_intro_text"
