--- a/CommunityMarket/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/CommunityMarket/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -14,14 +14,13 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/post_detail_currentuser_img"
+        android:id="@+id/post_detail_user_image"
         android:layout_width="@dimen/new_detail_height_image"
         android:layout_height="@dimen/new_detail_height_image"
         android:layout_marginStart="@dimen/new_detail_user_actual"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/boy"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/close_bottom_sheet"
         tools:srcCompat="@tools:sample/avatars" />
 
     <EditText
@@ -35,9 +34,9 @@
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="@dimen/new_detail_edit_text_size"
-        app:layout_constraintBottom_toBottomOf="@+id/post_detail_currentuser_img"
-        app:layout_constraintStart_toEndOf="@+id/post_detail_currentuser_img"
-        app:layout_constraintTop_toTopOf="@+id/post_detail_currentuser_img" />
+        app:layout_constraintBottom_toBottomOf="@+id/post_detail_user_image"
+        app:layout_constraintStart_toEndOf="@+id/post_detail_user_image"
+        app:layout_constraintTop_toTopOf="@+id/post_detail_user_image" />
 
     <Button
         android:id="@+id/post_detail_add_comment_btn"
@@ -73,14 +72,46 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_comment"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:background="@color/black"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/comment_empty_text"></android.support.v7.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/close_bottom_sheet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_close_bottom_sheet" />
+
+    <ProgressBar
+        android:id="@+id/progressBarBottom_sheet"
+        android:theme="@style/progress_theme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/post_detail_user_image"
+        app:layout_constraintEnd_toEndOf="@+id/post_detail_user_image"
+        app:layout_constraintStart_toStartOf="@+id/post_detail_user_image"
+        app:layout_constraintTop_toTopOf="@+id/post_detail_user_image" />
+
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:theme="@style/progress_theme"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/post_detail_add_comment_btn"
+        app:layout_constraintEnd_toEndOf="@+id/post_detail_add_comment_btn"
+        app:layout_constraintStart_toStartOf="@+id/post_detail_add_comment_btn"
+        app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
 
 
 </android.support.constraint.ConstraintLayout>
