--- a/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
+++ b/CommunityMarket/app/src/main/res/layout/item_commentaire.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -21,7 +22,7 @@
                 android:layout_marginStart="@dimen/commentaire_image_margin_start"
                 android:layout_marginTop="@dimen/commentaire_image_margin_top"
                 android:layout_marginBottom="8dp"
-                android:src="@drawable/boy"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -126,6 +127,16 @@
                 app:layout_constraintStart_toStartOf="@+id/chat_temps"
                 app:layout_constraintTop_toBottomOf="@+id/chat_temps"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <ProgressBar
+                android:id="@+id/progressBar_comment"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/chat_message_image_profil"
+                app:layout_constraintEnd_toEndOf="@+id/chat_message_image_profil"
+                app:layout_constraintStart_toStartOf="@+id/chat_message_image_profil"
+                app:layout_constraintTop_toTopOf="@+id/chat_message_image_profil" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
